server/flaskr/codes/Output/op_01FB15ECS101_0b32e16704ce4aceb9449fb28a98c1ad_0
/opt/Input/01FB15ECS101_0b32e16704ce4aceb9449fb28a98c1ad.c:1:1: error: expected '=', ',', ';', 'asm' or '__attribute__' at end of input
 asdf
 ^
